added try catch blocks
